# firecrawl-ecom-scraper

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  scraper.py  test_scraper.py
.github/workflows/: ci.yml
